--- a/v2/index.html
+++ b/v2/index.html
@@ -70,7 +70,7 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="/js/lawsuithelps.js"></script>
+<script src="/v2/assets/js/lawsuithelps.js"></script>
 </body>
 
 </html>
